--- a/artifacts/stock-shark.html
+++ b/artifacts/stock-shark.html
@@ -26,7 +26,6 @@
     <h2>Code</h2>
     <ul>
       <li><strong>Enhanced (browse):</strong> <a href="https://github.com/sullivan52/stock-shark-android">github.com/sullivan52/stock-shark-android</a></li>
-      <li><strong>Original (before) download:</strong> <a href="/files/stock-shark-before.zip">stock-shark-before.zip</a></li>
     </ul>
 
     <h2>Narrative</h2>
@@ -65,13 +64,8 @@
 
     <h2>Downloads</h2>
     <ul>
-      <li><a href="/files/stock-shark-narrative.pdf" target="_blank" rel="noopener">Narrative (PDF)</a></li>
-    </ul>
-
-    <h2>Links</h2>
-    <ul>
-      <li><strong>Repository:</strong> <a href="https://github.com/sullivan52/stock-shark-android">github.com/sullivan52/stock-shark-android</a></li>
-      <li><strong>README:</strong> <a href="https://github.com/sullivan52/stock-shark-android/blob/main/README.md">View</a></li>
+      <li><a href="/files/stock-shark-narrative.docx">Narrative (DOCX)</a></li>
+      <li><a href="/files/stock-shark-before.zip">Original (before) — ZIP</a></li>
     </ul>
 
     <p><a href="/">← Back to Home</a></p>
