--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <a class="navlink" href="/artifacts/stock-shark.html">Stock Shark (Android)</a>
     <a class="navlink" href="/artifacts/employee-avl.html">Employee Manager (C++ AVL)</a>
     <a class="navlink" href="/artifacts/adoption-dashboard.html">Adoption Dashboard (Python/Dash)</a>
-    <a class="navlink" href="/code-review.html">Code Review</a>
+    <a class="navlink" href="https://www.youtube.com/playlist?list=PLbLnEhbnW3vdF4b8L6LoamjBoLTZ6G12P" target="_blank" rel="noopener">
+      Code Review
+    </a>
   </nav>
 
   <main>
@@ -79,12 +81,11 @@
       The comprehensive nature of my enhancements—spanning mobile applications, system-level programming, and database management—positions me to contribute effectively to diverse development teams and tackle complex, multi-faceted technical challenges. I am confident that the skills, mindset, and professional standards developed throughout this program will enable me to deliver meaningful value to any organization while continuing to grow as a computer science professional.
     </p>
 
-    <h2>Quick Links</h2>
+    <h2>Project Repositories</h2>
     <ul class="compact">
-      <li><a href="/artifacts/stock-shark.html">Stock Shark — Android (Java, SQLite)</a></li>
-      <li><a href="/artifacts/employee-avl.html">Employee Management — C++ (AVL)</a></li>
-      <li><a href="/artifacts/adoption-dashboard.html">Animal Adoption Dashboard — Python/Dash, MongoDB</a></li>
-      <li><a href="/code-review.html">Code Review Video</a></li>
+      <li><a href="https://github.com/sullivan52/stock-shark-android" target="_blank" rel="noopener">Stock Shark — Android (Java, SQLite)</a></li>
+      <li><a href="https://github.com/sullivan52/employee-mangement-avl" target="_blank" rel="noopener">Employee Management — C++ (AVL)</a></li>
+      <li><a href="https://github.com/sullivan52/animal-rescue-dashboard" target="_blank" rel="noopener">Animal Adoption Dashboard — Python/Dash, MongoDB</a></li>
     </ul>
   </main>
 
